// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainComponent renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent
    getLoadingSyncEntry={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        <Component
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={undefined}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />
        </Component>,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={undefined}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bucketNavigateBack": undefined,
            "buckets": undefined,
            "dashboardNavigateBack": undefined,
            "deselectAll": undefined,
            "isActionBarShown": undefined,
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
            "openBucket": undefined,
            "redirectToInitializationScreen": undefined,
            "selectAll": undefined,
            "showCredits": [Function],
            "showOptions": [Function],
            "showQR": [Function],
            "showStorageInfo": [Function],
            "showSyncWindow": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={undefined}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />
          </Component>,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={undefined}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bucketNavigateBack": undefined,
              "buckets": undefined,
              "dashboardNavigateBack": undefined,
              "deselectAll": undefined,
              "isActionBarShown": undefined,
              "isSelectionMode": undefined,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
              "openBucket": undefined,
              "redirectToInitializationScreen": undefined,
              "selectAll": undefined,
              "showCredits": [Function],
              "showOptions": [Function],
              "showQR": [Function],
              "showStorageInfo": [Function],
              "showSyncWindow": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MainComponent renders correctly with ActionBarShown 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent
    getLoadingSyncEntry={[Function]}
    isActionBarShown={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        <Component
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={true}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />
        </Component>,
        <ActionBarComponent
          actions={undefined}
          applyMargin={true}
          bucketScreenRouteName={undefined}
          showTriangle={true}
        />,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={true}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bucketNavigateBack": undefined,
            "buckets": undefined,
            "dashboardNavigateBack": undefined,
            "deselectAll": undefined,
            "isActionBarShown": true,
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
            "openBucket": undefined,
            "redirectToInitializationScreen": undefined,
            "selectAll": undefined,
            "showCredits": [Function],
            "showOptions": [Function],
            "showQR": [Function],
            "showStorageInfo": [Function],
            "showSyncWindow": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "actions": undefined,
          "applyMargin": true,
          "bucketScreenRouteName": undefined,
          "showTriangle": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={true}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />
          </Component>,
          <ActionBarComponent
            actions={undefined}
            applyMargin={true}
            bucketScreenRouteName={undefined}
            showTriangle={true}
          />,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={true}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bucketNavigateBack": undefined,
              "buckets": undefined,
              "dashboardNavigateBack": undefined,
              "deselectAll": undefined,
              "isActionBarShown": true,
              "isSelectionMode": undefined,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
              "openBucket": undefined,
              "redirectToInitializationScreen": undefined,
              "selectAll": undefined,
              "showCredits": [Function],
              "showOptions": [Function],
              "showQR": [Function],
              "showStorageInfo": [Function],
              "showSyncWindow": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "actions": undefined,
            "applyMargin": true,
            "bucketScreenRouteName": undefined,
            "showTriangle": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MainComponent renders correctly with ActionBarShown 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent
    getLoadingSyncEntry={[Function]}
    isSelectionMode={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        <Component
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={undefined}
            isSelectionMode={true}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />
        </Component>,
        <ActionBarComponent
          actions={undefined}
          applyMargin={false}
          bucketScreenRouteName={undefined}
          showTriangle={false}
        />,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={undefined}
            isSelectionMode={true}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bucketNavigateBack": undefined,
            "buckets": undefined,
            "dashboardNavigateBack": undefined,
            "deselectAll": undefined,
            "isActionBarShown": undefined,
            "isSelectionMode": true,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
            "openBucket": undefined,
            "redirectToInitializationScreen": undefined,
            "selectAll": undefined,
            "showCredits": [Function],
            "showOptions": [Function],
            "showQR": [Function],
            "showStorageInfo": [Function],
            "showSyncWindow": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "actions": undefined,
          "applyMargin": false,
          "bucketScreenRouteName": undefined,
          "showTriangle": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={undefined}
              isSelectionMode={true}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />
          </Component>,
          <ActionBarComponent
            actions={undefined}
            applyMargin={false}
            bucketScreenRouteName={undefined}
            showTriangle={false}
          />,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={undefined}
              isSelectionMode={true}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bucketNavigateBack": undefined,
              "buckets": undefined,
              "dashboardNavigateBack": undefined,
              "deselectAll": undefined,
              "isActionBarShown": undefined,
              "isSelectionMode": true,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
              "openBucket": undefined,
              "redirectToInitializationScreen": undefined,
              "selectAll": undefined,
              "showCredits": [Function],
              "showOptions": [Function],
              "showQR": [Function],
              "showStorageInfo": [Function],
              "showSyncWindow": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "actions": undefined,
            "applyMargin": false,
            "bucketScreenRouteName": undefined,
            "showTriangle": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MainComponent renders correctly with ActionBarShown 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent
    getLoadingSyncEntry={[Function]}
    isCreateBucketInputShown={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        <Component
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={undefined}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />
        </Component>,
        null,
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Component
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.3,
                },
              ]
            }
          />
          <CreateBucketPopUpComponent
            onApply={[Function]}
            onCancel={[Function]}
          />
        </Component>,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={undefined}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bucketNavigateBack": undefined,
            "buckets": undefined,
            "dashboardNavigateBack": undefined,
            "deselectAll": undefined,
            "isActionBarShown": undefined,
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
            "openBucket": undefined,
            "redirectToInitializationScreen": undefined,
            "selectAll": undefined,
            "showCredits": [Function],
            "showOptions": [Function],
            "showQR": [Function],
            "showStorageInfo": [Function],
            "showSyncWindow": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.3,
                  },
                ]
              }
            />,
            <CreateBucketPopUpComponent
              onApply={[Function]}
              onCancel={[Function]}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.3,
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onApply": [Function],
              "onCancel": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={undefined}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />
          </Component>,
          null,
          <Component
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.3,
                  },
                ]
              }
            />
            <CreateBucketPopUpComponent
              onApply={[Function]}
              onCancel={[Function]}
            />
          </Component>,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={undefined}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bucketNavigateBack": undefined,
              "buckets": undefined,
              "dashboardNavigateBack": undefined,
              "deselectAll": undefined,
              "isActionBarShown": undefined,
              "isSelectionMode": undefined,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
              "openBucket": undefined,
              "redirectToInitializationScreen": undefined,
              "selectAll": undefined,
              "showCredits": [Function],
              "showOptions": [Function],
              "showQR": [Function],
              "showStorageInfo": [Function],
              "showSyncWindow": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "bottom": 0,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "backgroundColor": "black",
                      "opacity": 0.3,
                    },
                  ]
                }
              />,
              <CreateBucketPopUpComponent
                onApply={[Function]}
                onCancel={[Function]}
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.3,
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onApply": [Function],
                "onCancel": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MainComponent renders correctly with ActionBarShown 4`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent
    getLoadingSyncEntry={[Function]}
    isActionBarShown={true}
    isCreateBucketInputShown={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        null,
        <Component
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={true}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />
        </Component>,
        <ActionBarComponent
          actions={undefined}
          applyMargin={true}
          bucketScreenRouteName={undefined}
          showTriangle={true}
        />,
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        >
          <Component
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.3,
                },
              ]
            }
          />
          <CreateBucketPopUpComponent
            onApply={[Function]}
            onCancel={[Function]}
          />
        </Component>,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={true}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bucketNavigateBack": undefined,
            "buckets": undefined,
            "dashboardNavigateBack": undefined,
            "deselectAll": undefined,
            "isActionBarShown": true,
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
            "openBucket": undefined,
            "redirectToInitializationScreen": undefined,
            "selectAll": undefined,
            "showCredits": [Function],
            "showOptions": [Function],
            "showQR": [Function],
            "showStorageInfo": [Function],
            "showSyncWindow": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "actions": undefined,
          "applyMargin": true,
          "bucketScreenRouteName": undefined,
          "showTriangle": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.3,
                  },
                ]
              }
            />,
            <CreateBucketPopUpComponent
              onApply={[Function]}
              onCancel={[Function]}
            />,
          ],
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "style": Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                Object {
                  "backgroundColor": "black",
                  "opacity": 0.3,
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "onApply": [Function],
              "onCancel": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={true}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />
          </Component>,
          <ActionBarComponent
            actions={undefined}
            applyMargin={true}
            bucketScreenRouteName={undefined}
            showTriangle={true}
          />,
          <Component
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "bottom": 0,
                "justifyContent": "center",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <Component
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.3,
                  },
                ]
              }
            />
            <CreateBucketPopUpComponent
              onApply={[Function]}
              onCancel={[Function]}
            />
          </Component>,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={true}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bucketNavigateBack": undefined,
              "buckets": undefined,
              "dashboardNavigateBack": undefined,
              "deselectAll": undefined,
              "isActionBarShown": true,
              "isSelectionMode": undefined,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
              "openBucket": undefined,
              "redirectToInitializationScreen": undefined,
              "selectAll": undefined,
              "showCredits": [Function],
              "showOptions": [Function],
              "showQR": [Function],
              "showStorageInfo": [Function],
              "showSyncWindow": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "actions": undefined,
            "applyMargin": true,
            "bucketScreenRouteName": undefined,
            "showTriangle": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Component
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "bottom": 0,
                      "justifyContent": "center",
                      "left": 0,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    Object {
                      "backgroundColor": "black",
                      "opacity": 0.3,
                    },
                  ]
                }
              />,
              <CreateBucketPopUpComponent
                onApply={[Function]}
                onCancel={[Function]}
              />,
            ],
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "bottom": 0,
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "style": Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "bottom": 0,
                    "justifyContent": "center",
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "backgroundColor": "black",
                    "opacity": 0.3,
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "onApply": [Function],
                "onCancel": [Function],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`MainComponent renders correctly with sync 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MainComponent
    getLoadingSyncEntry={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <SyncOverlayComponent
          onPress={undefined}
        >
          true
        </SyncOverlayComponent>,
        <Component
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={undefined}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />
        </Component>,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": true,
          "onPress": undefined,
        },
        "ref": null,
        "rendered": true,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Connect(MainNavigationContainer)
            bucketNavigateBack={undefined}
            buckets={undefined}
            dashboardNavigateBack={undefined}
            deselectAll={undefined}
            isActionBarShown={undefined}
            isSelectionMode={undefined}
            isSingleItemSelected={undefined}
            onActionBarPress={[Function]}
            openBucket={undefined}
            redirectToInitializationScreen={undefined}
            selectAll={undefined}
            showCredits={[Function]}
            showOptions={[Function]}
            showQR={[Function]}
            showStorageInfo={[Function]}
            showSyncWindow={undefined}
          />,
          "style": Object {
            "flex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "bucketNavigateBack": undefined,
            "buckets": undefined,
            "dashboardNavigateBack": undefined,
            "deselectAll": undefined,
            "isActionBarShown": undefined,
            "isSelectionMode": undefined,
            "isSingleItemSelected": undefined,
            "onActionBarPress": [Function],
            "openBucket": undefined,
            "redirectToInitializationScreen": undefined,
            "selectAll": undefined,
            "showCredits": [Function],
            "showOptions": [Function],
            "showQR": [Function],
            "showStorageInfo": [Function],
            "showSyncWindow": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <SyncOverlayComponent
            onPress={undefined}
          >
            true
          </SyncOverlayComponent>,
          <Component
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={undefined}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />
          </Component>,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": true,
            "onPress": undefined,
          },
          "ref": null,
          "rendered": true,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Connect(MainNavigationContainer)
              bucketNavigateBack={undefined}
              buckets={undefined}
              dashboardNavigateBack={undefined}
              deselectAll={undefined}
              isActionBarShown={undefined}
              isSelectionMode={undefined}
              isSingleItemSelected={undefined}
              onActionBarPress={[Function]}
              openBucket={undefined}
              redirectToInitializationScreen={undefined}
              selectAll={undefined}
              showCredits={[Function]}
              showOptions={[Function]}
              showQR={[Function]}
              showStorageInfo={[Function]}
              showSyncWindow={undefined}
            />,
            "style": Object {
              "flex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bucketNavigateBack": undefined,
              "buckets": undefined,
              "dashboardNavigateBack": undefined,
              "deselectAll": undefined,
              "isActionBarShown": undefined,
              "isSelectionMode": undefined,
              "isSingleItemSelected": undefined,
              "onActionBarPress": [Function],
              "openBucket": undefined,
              "redirectToInitializationScreen": undefined,
              "selectAll": undefined,
              "showCredits": [Function],
              "showOptions": [Function],
              "showQR": [Function],
              "showStorageInfo": [Function],
              "showSyncWindow": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
